--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-plugin-lenddo",
-  "version": "1.0.0-dev",
+  "version": "1.5.1",
   "description": "Cordova Lenddo Plugin",
   "main": "./types/index.js",
   "types": "./types/index.d.ts",
@@ -28,7 +28,7 @@
     "test": "npm run eslint",
     "eslint": "node node_modules/eslint/bin/eslint www && node node_modules/eslint/bin/eslint src && node node_modules/eslint/bin/eslint tests"
   },
-  "author": "Apache Software Foundation",
+  "author": "LenddoEFL Mobile Team",
   "license": "Apache-2.0",
   "engines": {
     "cordovaDependencies": {
