--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "types": "./types/index.d.ts",
   "cordova": {
     "id": "cordova-plugin-lenddo",
+    "plugins": {
+      "cordova-support-kotlin": {}
+    },
     "platforms": [
       "android"
     ]
