--- a/plugin.xml
+++ b/plugin.xml
@@ -8,7 +8,7 @@
     <js-module src="www/lenddo.js" name="lenddo">
         <clobbers target="window.Lenddo" />
     </js-module>
-    <platform name="android">
+    <platform name="android" kotlin="1.2.51">
         <config-file target="config.xml" parent="/*">
             <feature name="Lenddo">
                 <param name="android-package" value="org.apache.cordova.plugin.Lenddo"/>
@@ -18,6 +18,8 @@
             <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
         </config-file>
         <source-file src="src/android/Lenddo.java" target-dir="src/org/apache/cordova/plugin" />
+        <apply-plugin>kotlin-android-extension</apply-plugin>
+        <apply-plugin>kotlin-apt</apply-plugin>
     </platform>
     <framework src="lenddosdk" custom="true" />
 </plugin>
