--- a/lenddosdk/build.gradle
+++ b/lenddosdk/build.gradle
@@ -72,7 +72,7 @@ dependencies {
     implementation 'com.android.support:exifinterface:26.1.0'
     implementation 'commons-codec:commons-codec:1.10'
     implementation 'org.apache.commons:commons-lang3:3.4'
-    implementation 'com.google.code.gson:gson:2.8.2'
+    api 'com.google.code.gson:gson:2.8.2'
     implementation 'com.squareup.mimecraft:mimecraft:1.1.1'
     implementation 'com.squareup.okio:okio:1.14.0'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
