--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-plugin-lenddo",
-  "version": "1.7.1-a",
+  "version": "1.8.0",
   "description": "Cordova Lenddo Plugin",
   "main": "./types/index.js",
   "types": "./types/index.d.ts",
