updated the package name and readme to indicate the use of the lenddo namespace and bumped up version from 1.8.0 to 1.8.1

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cordova-plugin-lenddo",
-  "version": "1.8.0",
+  "name": "@lenddo/cordova-plugin-lenddo",
+  "version": "1.8.1",
   "description": "Cordova Lenddo Plugin",
   "main": "./types/index.js",
   "types": "./types/index.d.ts",
