--- a/lenddosdk/build.gradle
+++ b/lenddosdk/build.gradle
@@ -30,8 +30,8 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 35
-        versionName "3.0.0-alpha01"
+        versionCode 36
+        versionName "3.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
