--- a/lenddosdk/src/main/AndroidManifest.xml
+++ b/lenddosdk/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
     <uses-permission android:name="com.google.android.gm.permission.READ_CONTENT_PROVIDER" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
+    <uses-permission android:name="android.permission.READ_SMS" />
+
+
     <uses-feature
         android:name="android.hardware.BLUETOOTH"
         android:required="false" />
